--- a/sqitch.conf
+++ b/sqitch.conf
@@ -6,3 +6,11 @@
 	# target = db:pg:
 	# registry = sqitch
 	# client = psql
+[target "rebekah_test"]
+	uri = db:pg:rebekah_test
+[engine "pg"]
+	target = rebekah_test
+[deploy]
+	verify = true
+[rebase]
+	verify = true
